--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -13,7 +13,8 @@ ul{
     display: flex;
     align-items: center;
     margin: 0;
-    width: 50%;
+    width: 100%;
+    padding: 0;
 }
 
 a{
@@ -31,6 +32,7 @@ li{
     margin: 0;
     width: 100%;
     color: var(--nav-col);
+    font-weight: 700;
 }
 
 .moverNav{
@@ -38,4 +40,16 @@ li{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media (max-width: 740px) {
+    nav{
+        flex-direction: column;
+    }
+    .titNav{
+        text-align: center;
+    }
+    li{
+        text-align: center;
+    }
 }
