--- a/src/pages/Shop/style.css
+++ b/src/pages/Shop/style.css
@@ -57,8 +57,12 @@
         margin: 0;
         justify-content: center;
         align-items: center;
+        margin-bottom: 2rem;
     }
     .liU{
         text-align: center;
+    }
+    .mainShop{
+        display: block;
     }
 }
