--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
   background-color: var(--back-fondo);
+  scroll-behavior: smooth;
 }
 
 code {
