--- a/src/pages/Main/HomeShow.css
+++ b/src/pages/Main/HomeShow.css
@@ -8,7 +8,7 @@
 
 .mainHo{
     min-height: calc(100vh - 92px);
-    background-image: url('/home/valen/the_odin_project/shopping_cart/src/images/Vector.svg');
+    background-image: url('../../images/Vector.svg');
     background-repeat: no-repeat;
     background-size: cover;
     display: block;
