Better responsive Checkout

--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -52,3 +52,9 @@
     background-position: center;
     padding: 2rem;
 }
+
+@media (max-width: 830px){
+    .mainCheck{
+        display: block;
+    }
+}
