Better design and functions

--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -1,6 +1,6 @@
 :root{
     --nav-col: #F0F4F8;
-    --nav-bg: #044E54;
+    --nav-bg: #043d42;
     --nav-hov: #0000003d;
     --color-check: #043a3f;
 }
