--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -78,18 +78,23 @@ a{
     .titNav{
         text-align: center;
         margin: 0;
+        font-size: 2rem;
     }
     .liName{
         text-align: center;
     }
+    .linkH{
+        font-size: 1rem;
+    }
 }
+
 
 
 .linkH{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 30px;
+    border-radius: 1.8rem;
     padding: 0.5rem;
     transition: 0.2s;
 }
