--- a/src/pages/Shop/style.css
+++ b/src/pages/Shop/style.css
@@ -19,6 +19,7 @@
     padding: 1rem 2rem 1rem 2rem;
     background-color: var(--title);
     text-align: center;
+    color: white;
 }
 
 
@@ -63,18 +64,19 @@
 }
 
 .shopArt{
-    color: black;
+    color: white;
     padding: 0.75rem 0.25rem;
     width: 100%;
 }
 
 .active{
-    color: white;
+    color: black;
     background-color: var(--hover-pan)
 }
 
 .titNavIzqc{
     margin: 0;
+    color:white;
 }
 
 
@@ -96,6 +98,7 @@
 
 .menuI{
     display: none;
+    fill: white;
 }
 .show{
     display:flex;
@@ -106,7 +109,7 @@
         position: absolute;
         left: -100%;
         transition: all 0.5s ease;
-        top: 216.07px;
+        top: 9.188rem;
         opacity: 1;
         z-index: 1;
     }
@@ -117,6 +120,9 @@
     .menuI{
         display: flex;
         cursor: pointer;
+        position: absolute;
+        right: 0;
+        transform: translate(-60%);
     }
     .products{
         width: 100%;
@@ -155,5 +161,8 @@
     }
     .shopArt:hover{
         background-color: var(--hover-pan);
+    }
+    .titNavIzqc{
+        font-size: 1rem;
     }
 }
