--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -2,7 +2,7 @@
     --nav-col: #F0F4F8;
     --nav-bg: #043d42;
     --nav-hov: #0000003d;
-    --color-check: #043a3f;
+    --color-check: #03292c;
 }
 
 nav{
@@ -41,7 +41,6 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 0.2rem;
     font-size: 0.7rem;
 }
 
