--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -8,8 +8,7 @@
 .totS{
     margin: 0;
     text-align: right;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding: 1rem;
     color: var(--nav-col);
     text-align: center;
 }
@@ -67,11 +66,21 @@
     }
     .bCheck{
         margin-bottom: 1rem;
+        width: 100px;
+        height: 35px;
+        font-size: 0.75rem;
     }
     .noItem{
         font-size: 4rem;
     }
     .noItemM{
         font-size: 1rem;
+    }
+    .totS{
+        font-size: 1rem;
+    }
+    .bordeizq{
+        border-bottom-left-radius: 0.5rem;
+        border-bottom-right-radius: 0.5rem;
     }
 }
