--- a/src/pages/Shop/style.css
+++ b/src/pages/Shop/style.css
@@ -149,6 +149,7 @@
         width: 100%;
         text-align: center;
         padding: 1rem 0;
+        font-size: 1rem;
     }
     .derPanel{
         width: auto;
