--- a/src/pages/Shop/style.css
+++ b/src/pages/Shop/style.css
@@ -70,8 +70,9 @@
 }
 
 .active{
-    color: black;
-    background-color: var(--hover-pan)
+    color: white;
+    background-color: var(--hover-pan);
+    font-weight: 900;
 }
 
 .titNavIzqc{
