--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -19,6 +19,7 @@ nav{
     padding: 0;
     justify-content: right;
     gap: 0.5rem;
+    transform: translate(-10%);
 }
 
 a{
@@ -35,14 +36,10 @@ a{
 
 .cantidad{
     background-color: var(--color-check);
-    width: 20px;
-    height: 20px;
     border-radius: 30px;
     color: var(--nav-col);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 0.7rem;
+    padding: 0.2rem 0.4rem;
 }
 
 .titNav{
@@ -59,6 +56,7 @@ a{
 .che{
     display: flex;
     align-items: center;
+    gap: 0.1rem;
 }
 
 .moverNav{
@@ -70,17 +68,17 @@ a{
 
 @media (max-width: 740px) {
     nav{
-        flex-direction: column;
         position:sticky;
         width: 100%;
-        z-index: 2;
+        z-index: 3;
         padding: 0.25rem 0;
         top: 0;
     }
     .titNav{
         text-align: center;
         margin: 0;
-        font-size: 2rem;
+        font-size: 1.2rem;
+        transform: translate(10%);
     }
     .liName{
         text-align: center;
