--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -11,6 +11,7 @@
     padding: 1rem;
     color: var(--nav-col);
     text-align: center;
+    font-size: 1rem;
 }
 
 
@@ -78,9 +79,5 @@
     }
     .totS{
         font-size: 1rem;
-    }
-    .bordeizq{
-        border-bottom-left-radius: 0.5rem;
-        border-bottom-right-radius: 0.5rem;
     }
 }
