--- a/src/pages/Shop/style.css
+++ b/src/pages/Shop/style.css
@@ -14,7 +14,7 @@
 
 
 .titNavIzq{
-    font-size: 1.875rem;
+    font-size: 1.2rem;
     margin: 0;
     padding: 1rem 2rem 1rem 2rem;
     background-color: var(--title);
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--izq-panel);
-    min-width: 300px;
+    min-width: 220px;
 }
 
 .derPanel{
@@ -78,6 +78,7 @@
 .titNavIzqc{
     margin: 0;
     color:white;
+    font-size: 1.2rem;
 }
 
 
@@ -108,14 +109,14 @@
 @media (max-width: 830px) {
     .downU{
         position: absolute;
-        left: -100%;
-        transition: all 0.5s ease;
-        top: 9.1rem;
+        top: -100%;
+        transition: all 0.75s ease;
+        left: 0;
         opacity: 1;
         z-index: 1;
     }
     .show{
-        left: 0;
+        top: 5.625rem;
         opacity: 1;
     }
     .menuI{
@@ -127,7 +128,8 @@
     }
     .products{
         width: 100%;
-        padding: 1rem 0 ;
+        padding: 0.6rem 0;
+        z-index: 2;
     }
     .total{
         flex-direction: column;
@@ -149,7 +151,7 @@
     .titNavIzq{
         width: 100%;
         text-align: center;
-        padding: 1rem 0;
+        padding: 0.6rem 0;
         font-size: 1rem;
     }
     .derPanel{
@@ -157,6 +159,7 @@
     }
     .shopArt{
         background-color: var(--izq-panel);
+        padding: 0.5rem 0.25rem;
     }
     .active{
         background-color: var(--hover-pan);
