--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -9,6 +9,7 @@ nav{
     display: flex;
     padding: 0.4rem 0.72657rem;
     background-color: var(--nav-bg);
+    box-shadow: 0 1px 2px -2px gray;
 }
 
 .navAll{
@@ -84,7 +85,7 @@ a{
         text-align: center;
     }
     .linkH{
-        font-size: 1rem;
+        font-size: 0.75rem;
     }
 }
 
@@ -97,6 +98,7 @@ a{
     border-radius: 1.8rem;
     padding: 0.5rem;
     transition: 0.2s;
+    font-size: 0.75rem;
 }
 .linkH:hover{
     background-color: var(--nav-hov);
