--- a/src/pages/Shop/style.css
+++ b/src/pages/Shop/style.css
@@ -7,7 +7,6 @@
 
 
 .mainShop{
-    display: flex;
     min-height: var(--calculo);
     height: 100%;
 }
@@ -35,17 +34,19 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
-    padding: 1rem;
+    padding: 1rem 0;
     width: 100%;
 }
 
 .downU{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     width: 100%;
     padding: 0;
     margin: 0;
+    gap: 5rem;
+    box-shadow: 0 4px 2px -2px gray;
 }
 
 .liU{
@@ -61,11 +62,12 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    flex-direction: column;
 }
 
 .shopArt{
     color: white;
-    padding: 0.75rem 0.25rem;
+    padding: 0.3rem 0.5rem;
     width: 100%;
 }
 
@@ -82,12 +84,12 @@
 }
 
 
-.liU:hover{
+.shopArt:hover{
     background-color: var(--hover-pan);
 }
 
 .products{
-    display: flex;
+    display: none;
     font-size: 1.875rem;
     margin: 0;
     padding: 1rem 2rem;
@@ -114,6 +116,8 @@
         left: 0;
         opacity: 1;
         z-index: 1;
+        flex-direction: column;
+        gap: 0;
     }
     .show{
         top: 5.638rem;
@@ -130,6 +134,7 @@
         width: 100%;
         padding: 0.6rem 0;
         z-index: 2;
+        display: flex;
     }
     .total{
         flex-direction: column;
