--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -10,6 +10,8 @@ nav{
     padding: 0.4rem 0.72657rem;
     background-color: var(--nav-bg);
     box-shadow: 0 1px 2px -2px gray;
+    z-index: 3;
+    position: relative;
 }
 
 .navAll{
@@ -99,6 +101,7 @@ a{
     padding: 0.5rem;
     transition: 0.2s;
     font-size: 0.75rem;
+    cursor: pointer;
 }
 .linkH:hover{
     background-color: var(--nav-hov);
