--- a/src/components/Checkout/styles.css
+++ b/src/components/Checkout/styles.css
@@ -65,7 +65,6 @@
 .centrarChecker{
     display: flex;
     justify-content: center;
-    padding: 0 0 0 1rem;
 }
 
 
@@ -108,14 +107,15 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
-    padding: 1rem 0;
+    padding: 1rem 0 0 0 ;
     width: 100%;
-    max-height: 45.5rem;
+    max-height: calc(100vh - 168.3px);
 }
 
 @media (max-width: 830px){
     .derPanell{
-        max-height: 38rem; 
+        max-height: calc(100vh - 191.53px);
+        margin-bottom: 0.25rem;
     }
     .mainCheck{
         display: block;
@@ -126,7 +126,6 @@
         transform: translate(500%);
     }
     .bCheck{
-        margin-bottom: 1rem;
         width: 100px;
         height: 35px;
         font-size: 0.75rem;
@@ -142,9 +141,5 @@
     }
     .mover{
         overflow-x: scroll;
-    }
-    .centrarChecker{
-        position: fixed;
-        transform: translate(80%, 1480%);
     }
 }
