--- a/src/components/Checkout/styles.css
+++ b/src/components/Checkout/styles.css
@@ -30,6 +30,7 @@
     display: flex;
     width: 100%;
     flex-direction: column;
+    height: 100%;
 }
 
 .bCheck{
@@ -46,6 +47,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    bottom: 1.3rem;
 }
 
 .bCheck:hover{
@@ -144,5 +147,10 @@
     .mover{
         overflow-y: scroll;
         overflow-x: hidden;
+    }
+    .bCheck{
+        display: flex;
+        position: absolute;
+        bottom: 0.8rem;
     }
 }
