Fixed Checkout bar

--- a/src/components/Checkout/styles.css
+++ b/src/components/Checkout/styles.css
@@ -73,7 +73,7 @@
 }
 
 .mainCheck{
-    display: none;
+    display: flex;
     min-height: calc(100vh);
     height: 100%;
     width: 500px;
@@ -103,7 +103,7 @@
 .caTivo{
     right: 0%;
     opacity: 1;
-    display: flex;
+    transition: all 0.75s ease;
 }
 
 .derPanell{
