--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   font-size: 16px;
   background-color: var(--back-fondo);
   scroll-behavior: smooth;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 code {
