--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
   overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.notOver{
+  overflow-y: hidden;
 }
