solved error of bg

--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -1,6 +1,6 @@
 :root{
     --nav-col: #1E293B;
-    --nav-bg: #94A3B8;
+    --nav-bg: #90a7bb;
     --nav-hov: #0000003d;
     --color-checkout: #64748B;
     --color-nav: #fff;
