--- a/src/components/Navigator/nav.css
+++ b/src/components/Navigator/nav.css
@@ -10,7 +10,6 @@ nav{
     display: flex;
     padding: 0.4rem 0.72657rem;
     background-color: var(--nav-bg);
-    box-shadow: 0 1px 2px -2px gray;
     z-index: 3;
     position: relative;
 }
@@ -50,7 +49,7 @@ a{
     font-size: 1.5rem;
     margin: 0;
     width: 100%;
-    color: var(--nav-col);
+    color: var(--color-nav);
     font-weight: 700;
     margin-left: 2rem;
     display: flex;
