--- a/src/pages/Main/HomeShow.css
+++ b/src/pages/Main/HomeShow.css
@@ -19,7 +19,7 @@
 .h3H{
     margin: 0;
     font-weight: 100;
-    color: var(--nav-col);
+    color: var(--color-nav);
     font-size: 2.2rem;
 }
 
