--- a/src/pages/Shop/style.css
+++ b/src/pages/Shop/style.css
@@ -45,7 +45,6 @@
     padding: 0;
     margin: 0;
     gap: 5rem;
-    box-shadow: 0 4px 2px -2px gray;
 }
 
 .liU{
@@ -62,7 +61,7 @@
 .shopArt{
     color: var(--color-panel);
     padding: 0.3rem 0.5rem;
-    width: 100%;
+    width: 12ch;
 }
 
 .active{
@@ -102,7 +101,7 @@
     display:flex;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 949px) {
     .downU{
         position: absolute;
         top: -100%;
@@ -153,6 +152,7 @@
     .shopArt{
         background-color: var(--top-panel);
         padding: 0.5rem 0.25rem;
+        width: 100%;
     }
     .active{
         background-color: var(--hover-panel);
