--- a/src/components/Checkout/styles.css
+++ b/src/components/Checkout/styles.css
@@ -36,8 +36,8 @@
 .bCheck{
     border-radius: 30px;
     border: none;
-    width: 144px;
-    height: 48px;
+    width: 9rem;
+    height: 3rem;
     font-size: 0.938rem;
     font-weight: 800;
     background-color: var(--check-btn);
@@ -76,7 +76,7 @@
     display: flex;
     min-height: calc(100vh);
     height: 100%;
-    width: 500px;
+    width: 31.25rem;
     position: fixed;
     top: 0;
     right: -100%;
@@ -119,20 +119,20 @@
 
 @media (max-width: 830px){
     .derPanell{
-        max-height: calc(100vh - 191.53px);
+        max-height: calc(100vh - 200.3px);
         margin-bottom: 0.25rem;
     }
     .mainCheck{
         display: block;
         min-height: 0;
-        width: 320px;
+        width: 20rem;
     }
     .crossC{
         right: 1rem;
     }
     .bCheck{
-        width: 100px;
-        height: 35px;
+        width: 6.25rem;
+        height: 2.1875rem;
         font-size: 0.75rem;
     }
     .noItem{
