--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;800&display=swap');
 
+
+html{
+  font-size: 16px;
+}
+
 body {
   margin: 0;
   font-family: 'Nunito', sans-serif;
